<resources>
    <string name="app_name">Kisan-Help</string>
    <string name="app_subtitle">The path of document assistance </string>
    <string name="contact_process_manager">SIGN UP NOW</string>
    <string name="have_and_account">Have and account?</string>
    <string name="your_user_id">Your email id</string>
    <string name="enter_user_id">Enter email Id</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="remember_password">Remember Password</string>
    <string name="the_finger_print_option_is_available_in_the_app_setting_after_login">The finger print option is available in the app setting after login!</string>
    <string name="login">Login</string>
    <string name="all_ready_login_id_sign_in">All ready login id ? Sign In</string>
    <string name="register">Register</string>
    <string name="your_email_id">Your email id</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="your_first_name">Your first name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_password">Your password</string>
    <string name="new_user_register">New User Register</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="forget_password">Forget  password</string>
    <string name="submit">Submit</string>
    <string name="registered_mobile_number">Registered mobile number</string>
    <string name="ems">Registered email id</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="notification">notification</string>
    <string name="profile">Profile</string>
</resources>
