<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />
        <com.docx.farmersupport.customs.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="@string/login_now"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold"
            app:ctypeface="OpenSans-Bold.ttf" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginRight="@dimen/dp_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="left|center_vertical">

                <com.docx.farmersupport.customs.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:drawableRight="@drawable/ic_message"
                    android:gravity="left"
                    android:text="@string/your_user_id"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_8"
                    android:textStyle="bold"
                    app:ctypeface="OpenSans-Semibold.ttf" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/reg_text_color"
                    android:textSize="@dimen/sp_8">

                    <com.docx.farmersupport.customs.CustomEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_id"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/color_405464"
                        android:textSize="@dimen/sp_8"
                        app:ctypeface="OpenSans-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginRight="@dimen/dp_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical">

                <com.docx.farmersupport.customs.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:drawableRight="@drawable/ic_lock"
                    android:gravity="left"
                    android:text="Your password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_8"
                    android:textStyle="bold"
                    app:ctypeface="OpenSans-Semibold.ttf" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/reg_text_color"
                    android:textSize="@dimen/sp_8">

                    <com.docx.farmersupport.customs.CustomEditText
                        android:id="@+id/et_email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:imeOptions="actionNext"
                        android:inputType="numberPassword"
                        android:textColor="@color/color_405464"
                        android:textSize="@dimen/sp_8"
                        app:ctypeface="OpenSans-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="left|center_vertical">

            <RadioButton
                android:layout_weight="1"
                android:textSize="@dimen/sp_5"
                android:text="@string/remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.docx.farmersupport.customs.CustomTextView
                android:id="@+id/forgets_pass"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:gravity="right"
                android:paddingLeft="@dimen/dp_3"
                android:text="@string/forget_your_password"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/sp_6"
                android:textStyle="bold"
                app:ctypeface="OpenSans-Bold.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_6"
            android:gravity="center|center_vertical">

            <com.docx.farmersupport.customs.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="@dimen/dp_1"
                android:text="@string/have_and_account"
                android:textAllCaps="false"
                android:textColor="@color/color_435464"
                android:textSize="@dimen/sp_6"
                android:textStyle="normal"
                app:ctypeface="OpenSans-Semibold.ttf" />

            <com.docx.farmersupport.customs.CustomTextView
                android:id="@+id/signup_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:gravity="left"
                android:paddingLeft="@dimen/dp_3"
                android:text="@string/contact_process_manager"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/sp_7"
                android:textStyle="bold"
                app:ctypeface="OpenSans-Bold.ttf" />

        </LinearLayout>

        <com.docx.farmersupport.customs.CustomButton
            android:layout_margin="@dimen/dp_3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:padding="@dimen/dp_3"
            android:textColor="@color/white"
            android:id="@+id/btn_lgn"
            android:textSize="@dimen/sp_7"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            app:ctypeface="OpenSans-Regular.ttf"
            android:text="@string/login" />

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>