<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo" />


    <com.docx.farmersupport.customs.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:gravity="center|center_vertical"
        android:text="@string/new_user_register"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_10"
        android:textStyle="bold"
        app:ctypeface="OpenSans-Bold.ttf" />

    <android.support.v4.widget.NestedScrollView
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/dp_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_message"
                        android:gravity="left"
                        android:text="@string/your_first_name"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_first_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_message"
                        android:gravity="left"
                        android:text="@string/your_last_name"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_message"
                        android:gravity="left"
                        android:text="@string/your_email_id"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email_id"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_message"
                        android:gravity="left"
                        android:text="@string/your_mobile_number"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_mobile_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_lock"
                        android:gravity="left"
                        android:text="@string/your_password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_pass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_pass1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Password"
                            android:imeOptions="actionNext"
                            android:inputType="numberPassword"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <com.docx.farmersupport.customs.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_5"
                        android:drawableRight="@drawable/ic_lock"
                        android:gravity="left"
                        android:text="@string/confirm_password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_8"
                        android:textStyle="bold"
                        app:ctypeface="OpenSans-Semibold.ttf" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_pass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/reg_text_color"
                        android:textSize="@dimen/sp_8">

                        <com.docx.farmersupport.customs.CustomEditText
                            android:id="@+id/et_pass2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionNext"
                            android:inputType="numberPassword"
                            android:textColor="@color/color_405464"
                            android:textSize="@dimen/sp_8"
                            app:ctypeface="OpenSans-Regular.ttf" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginTop="@dimen/dp_4"
                android:gravity="left|center_vertical">

                <com.docx.farmersupport.customs.CustomTextView
                    android:id="@+id/allredy_signin"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center|center_vertical"
                    android:paddingLeft="@dimen/dp_3"
                    android:text="@string/all_ready_login_id_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_6"
                    android:textStyle="bold"
                    app:ctypeface="OpenSans-Bold.ttf" />

            </LinearLayout>

            <ImageView
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp_3"
                android:src="@drawable/ic_finger_print"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center"/>


            <com.docx.farmersupport.customs.CustomButton
                android:layout_margin="@dimen/dp_3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_3"
                android:textColor="@color/white"
                android:id="@+id/btn_register"
                android:textSize="@dimen/sp_7"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                app:ctypeface="OpenSans-Regular.ttf"
                android:text="@string/register" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>